# backend

./: .gitignore  Procfile  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml
backend/: apps_routers.py  asgi.py  auth_router.py  settings.py  urls.py  wsgi.py
cfflch/api/: urls.py
cfflch/api/admission_status/: routes.py  serializers.py  service.py
db/: init.sql
plants/: admin.py  asgi.py  models.py  plants.sqlite3  serializers.py  settings.py  urls.py  views.py  wsgi.py
plants/api/: urls.py
plants/api/chatbot/: agents.py  chatbot.py  graph.py  nodes.py  routes.py  schemas.py  tools.py  urls.py
plants/api/config/: schemas.py
plants/api/esp32/: routes.py  serializers.py  service.py  urls.py
plants/api/messages/: routes.py  serializers.py  urls.py
plants/api/users/: routes.py  serializers.py  urls.py
plants/chatbot/: chatbot.py  schemas.py
plants/llm/: llm.py
plants/migrations/: 0001_initial.py  0002_alter_users_latitude_alter_users_longitude.py  0002_esp32data.py  0003_alter_users_latitude_alter_users_longitude.py  0003_esp32data_humidity_esp32data_temperateure.py  0004_alter_esp32data_humidity_and_more.py  0005_alter_esp32data_humidity_and_more.py  0006_alter_esp32data_analog_value_and_more.py  0007_rename_temperateure_esp32data_temperature.py
political_culture/: admin.py  models.py
political_culture/api/: urls.py  utils.py
political_culture/api/chatbot/: agents.py  chatbot.py  graph.py  nodes.py  prompts.py  routes.py  schemas.py  serializers.py  tools.py  urls.py  utils.py
political_culture/api/messages/: routes.py  serializers.py
political_culture/api/word_counter/: prompts.py  routes.py  schemas.py  serializers.py  service.py  tools.py  urls.py
political_culture/migrations/: 0001_initial.py  0002_textchunks_vector.py  0002_texts_content_description.py  0003_textchunks_chunk_text_alter_texts_author_and_more.py  0003_texts_user_submitted_text_chathistory_usermemory.py
